# flask-web-app-project-template

./: .autofile  .gitignore  README.md  Requirements.txt  app.py  auto.cmd  autofile  main.py  pyproject.toml
constants/: constants.py
controller/: activity_controller.py  controller.py
models/: model.py
public/css/: style.css
public/javascript/: test.js
route/: activity_route.py  api.py  auth.py  route.py
static/css/: style.css
templates/features/: about.html  contact.html  home.html
templates/initial/: base.html
views/auth/: login.html
views/features/: about.html  home.html
views/features/activity/: index.html  new.html  show.html  update.html
views/initial/: blank_layout.html  layout.html  sidebar.html
