[tool.poetry]
name = "flask-web-app-project-template"
version = "0.1.0"
description = ""
authors = ["Mark Wayne Buncaras Menorca <marcuwynu23@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_web_app_project_template"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-session = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
